added toluwa's screen

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/material-bottom-tabs": "^6.0.5",
     "react": "17.0.2",
     "react-native": "^0.65.1",
+    "react-native-material-dropdown": "^0.11.1",
     "react-native-paper": "^4.9.2",
     "react-native-vector-icons": "^8.1.0"
   },
